correct spacing for mobile cards

--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -214,17 +214,16 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 500px;
     border: 3px solid black;
-    /* margin: 1rem 1rem 1rem 1rem; */
   }
 
   .HomePage__mobile-card-ph {
-    width: 165px;
-    height: 205px;
+    width: 150px;
+    height: 200px;
     border: 1px solid gray;
-    margin: 0rem 1.1rem 0rem 1.1rem;
+    margin-bottom: 1rem;
   }
 }
 
